<resources>
    <string name="app_name">Lugares</string>
    <string name="email">Email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_maps">Map</string>
    <string name="nuevo_lugar">Nuevo Lugar</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear">Crear</string>
    <string name="location_permission_denied">Permiso de localización denegado</string>
    <string name="permission_required_toast">Se requieren permisos de localización</string>
    <string name="permission_rationale_location">Para que esta aplicación funcione se necesitan los permisos de localización</string>
</resources>
